# alto-central

./: .env.production.example  .gitignore  docker-compose.prod.yml
alto-central-backend/: .env.example  README.md  alembic.ini  pyproject.toml  requirements.txt
alto-central-backend/app/: __init__.py  config.py  main.py
alto-central-backend/app/analytics/: __init__.py  service.py
alto-central-backend/app/analytics/charts/: __init__.py  plotly_builder.py
alto-central-backend/app/analytics/templates/: __init__.py  manager.py  matcher.py  schema.py
alto-central-backend/app/api/: __init__.py  deps.py
alto-central-backend/app/api/v1/: afdd.py  ai_analytics.py  analytics.py  chat.py  energy.py  events.py  ml.py  ontology.py  optimization.py  realtime.py  router.py  sites.py  timeseries.py
alto-central-backend/app/config/: __init__.py  settings.py  sites.py
alto-central-backend/app/core/: __init__.py  exceptions.py  logging.py  security.py  time_utils.py
alto-central-backend/app/db/: __init__.py
alto-central-backend/app/db/connections/: __init__.py  local.py  mongodb.py  supabase.py  timescale.py
alto-central-backend/app/db/migrations/: env.py
alto-central-backend/app/db/repositories/: __init__.py
alto-central-backend/app/llm/: __init__.py  client.py
alto-central-backend/app/llm/prompts/: __init__.py  system.py
alto-central-backend/app/llm/tools/: __init__.py  chart_tools.py  (+2 more)
alto-central-backend/app/ml/: __init__.py
alto-central-backend/app/models/: __init__.py
alto-central-backend/app/optimization/: __init__.py
alto-central-backend/app/services/: __init__.py
alto-central-backend/app/workers/: __init__.py
alto-central-backend/docker/: Dockerfile  Dockerfile.worker  docker-compose.dev.yml  docker-compose.yml
alto-central-backend/tests/: __init__.py  conftest.py
(+80 files in other folders)
